--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,6 +6,7 @@
             color: rgb(9, 9, 62);
             padding-bottom: 1rem;
             position: relative;
+            z-index: -1;
         }
     
     
@@ -49,6 +50,7 @@
             .box-image{
                 width: 100%;
                 height: auto;
+                z-index: -1;
 
                 img{
                     width: 100%;
@@ -57,6 +59,7 @@
             }
         }
         .box{
+            z-index: -1;
             width: 100%;
             h2{
                 font-family: "Poppins", serif;
